# claude-tui

./: .gitignore  Cargo.toml  README.md
crates/claude-common/: Cargo.toml
crates/claude-common/src/: errors.rs  lib.rs  models.rs  paths.rs  protocol.rs
crates/claude-daemon/: Cargo.toml
crates/claude-daemon/src/: collector.rs  ipc.rs  main.rs  storage.rs
crates/claude-tui/: Cargo.toml
crates/claude-tui/src/: app.rs  client.rs  format.rs  main.rs  mock.rs  theme.rs
crates/claude-tui/src/widgets/: cost_breakdown.rs  live_monitor.rs  mod.rs  model_compare.rs  token_chart.rs
docs/: setup-guide.md
docs/plans/: 2026-03-05-claude-tui-design.md  architecture.md  code-review.md  devils-advocate-review.md  implementation-plan.md  memory-safety-review.md  visual-design.md
scripts/lib/: claude_common.sh
scripts/sketchybar/: claude_plugin.sh
