[package]
name = "claude-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "claude-tui"
path = "src/main.rs"

[dependencies]
claude-common = { path = "../claude-common" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
